style.css
@charset "UTF-8";

/*
Theme Name: Spacerowa Residence
Text Domain: spacerowaresidence
Author: Krystian Kielbasa
Author URI: https://github.com/KartVen
Version: 1.0
Description: Spacerowa Residence's Website 2021
License: The MIT License
License URI: https://opensource.org/licenses/MIT
*/

@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700&display=swap');

:root {
    --header-display: unset;
    --header-bg: #fffffff2;
    --header-bg-dark: #191919F2;
    --navbar-height: 80px;
    --footer-display: unset;

}

/* --- HOME STYLE --- */

* {
    box-sizing: border-box;
}

body {
    font-family: 'Barlow', Arial, sans-serif;
    margin: 0;
    padding: 0;
}

/* CONTAINER GRID */
.container {
    max-width: 100%;
    margin: 0 auto;
    padding: 0 15px;
}

@media (min-width: 576px) {
    .container {
        max-width: 540px;
        padding: 0;
    }
}

@media (min-width: 628px) {
    .container {
        max-width: 720px;
    }
}

@media (min-width: 992px) {
    .container {
        max-width: 960px;
    }
}

@media (min-width: 1200px) {
    .container {
        max-width: 1140px;
    }
}

/* HEADER */
header {
    display: var(--header-display, block);
    position: fixed;
    inset: 0 0 0 0;

    height: max-content;
    border-bottom: 1px solid #ffdc00;
    background-color: var(--header-bg);
    z-index: 1;
}

.navbar {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: var(--navbar-height, 80px);
    padding: 2px 10px;
    font-weight: 700;
    flex-wrap: wrap;
}

.navbar .logo > a {
    display: flex;
    display: -webkit-flex;
    display: -ms-flexbox;
    align-items: center;
    /* padding: 0 10px; */
    margin: 0 10px;
    text-decoration: none;
    color: unset;
}

.logo img {
    height: calc(0.88 * var(--navbar-height, 80px));
}

.logo .cnt {
    max-width: 170px;
    text-transform: uppercase;
    font-size: 24px;
    font-weight: 700;
    line-height: 21.6px;
}

.menu-btn {
    display: none;
    margin: 0 10px;
    padding: 10px;
    border: 0;
    cursor: pointer;
    background-color: transparent;
}

.menu-btn-box {
    display: inline-block;
    width: 35px;
    height: 24px;
    position: relative;
}

.menu-btn-bar, .menu-btn-bar::before, .menu-btn-bar::after {
    width: 100%;
    height: 3px;
    position: absolute;
    left: 0;
    background-color: #ffdc00;
    box-shadow: 1px 1px #000;
}

.menu-btn-bar {
    top: 50%;
    transform: translateY(-50%);
    transition: background-color .1s .2s ease-in-out;
}

.menu-btn-bar::before, .menu-btn-bar::after {
    content: '';
    transition: transform .2s .2s ease-in-out;
}

.menu-btn-bar:before {
    top: -10px;
}

.menu-btn-bar:after {
    top: 10px;
}

.menu-btn-active .menu-btn-bar {
    background-color: transparent;
    box-shadow: unset;
}

.menu-btn-active .menu-btn-bar:before {
    transform: translateY(10px) rotate(45deg);
    box-shadow: unset;
}

.menu-btn-active .menu-btn-bar:after {
    transform: translateY(-10px) rotate(-45deg);
    box-shadow: unset;
}

.navmenu-nav {
    position: relative;
    display: inline-block;
}

.navmenu-nav-active {
    position: absolute;
    top: 100%;
    display: inline-block !important;
    background-color: var(--header-bg);
}

.navmenu-nav .navmenu {
    position: relative;
    display: flex;
    flex: 1 1 auto;
    margin: 0;
    padding: 0;
    list-style: none;
}

.navmenu-nav > ul > li:not(:last-child) {
    margin-right: 5px;
}

.navmenu-nav ul li {
    border: 2px solid transparent;
    padding: 2px;
}

.navmenu-nav ul li a {
    color: unset;
    text-decoration: none;
    text-transform: uppercase;
}

.navmenu-nav > ul > li ul {
    visibility: hidden;
    opacity: 0;
    position: absolute;
    top: 100%;
    display: block;
    /* margin: 1px 0 0 -4px; */
    padding: 0;
    background-color: var(--header-bg);
    border: 2px solid #ffdc00;
    /* transition: opacity 0.2s, visibility 0.2s; */
}

.navmenu-nav > ul > li:last-child ul {

    right: 0px;
}

.navmenu-nav ul li ul li {
    margin: -2px 0 0 -2px;
    line-height: 1.7;
}

.navmenu-nav ul li ul li a {
}

.navmenu-nav ul li:hover {
    /* background: #ffdc00; */
    /* border: 2px solid #ffdc00; */
    /*color: #191919; */
}

.navmenu-nav ul li:hover > a {
    color: #ffdc00;
}

.navmenu-nav ul li:hover ul {
    visibility: visible;
    opacity: 1;
    /* box-shadow: 0px 3px 5px 2px #EBECF1; */
    list-style: none;
}

.navmenu-nav ul li:hover ul li a {


}

@keyframes slide-in {
    0% {
        top: -50px;
    }
    40% {
        top: 20px;
    }
    70% {
        top: 10px;
    }
    100% {
        top: 15px;
    }
}

/* MAIN */
.banner {
    position: relative;
    width: 99.8vw;
    height: 99.225vh;
    overflow: hidden;
}

.banner > img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.banner .banner-text-wrapper {
    position: absolute;
    inset: 50% auto auto 50%;
    color: #fff;
    transform: translate(-50%, -50%);
}

.banner .banner-text-1 {
    background: unset;
    margin-bottom: 25px;
    text-align: center;
    font-size: 81px;
    text-shadow: 0 5px 40px rgb(23 18 25 / 20%);
}

.banner .banner-text-2 {
    margin: 0 12% 0 12%;
    font-size: 24px;
    line-height: 1.4;
    text-shadow: 0 2px 30px rgb(23 18 25 / 60%);
    text-align: center;
    font-weight: 700;
}

.headline-que {
    margin-top: 0;
    padding-top: 70px;
    font-size: 40px;
    text-align: center;
}

.bicolor {
    text-shadow: .5px .5px black;
}

.bicolor > span {
    color: #ffdc00;
}

.sec-blk {
    width: 100%;
}

.sec-blk .sec-row, .sec-blk .sec-row-2 {
    width: 100%;
    height: fit-content;
    margin: 72px 0 0 0;
    padding: 0;
}

.sec-blk .sec-row-2 {
    display: flex;
    display: -webkit-flex;
    display: -ms-flexbox;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}
/* ... */

